Fixed alignment on home page

--- a/wwwroot/app.css
+++ b/wwwroot/app.css
@@ -57,12 +57,10 @@ h1:focus {
     display: flex;
     align-items: center;
     justify-content: center;
-    padding-right: 15%;
 }
 
 .overlay {
     background-color: rgba(0,0,0,0.5);
-    margin-left: 15%;
     padding: 60px 40px;
     border-radius: 16px;
     text-align: center;
